dark mode fixes

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -132,7 +132,7 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   width: 100%;
-  background-color: var(--roast-main-text);
+  background-color: var(--roast-new-blue);
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease;
@@ -195,7 +195,7 @@ header {
   left: 0;
   min-width: 200px;
   z-index: 1001;
-  background-color: var(--roast-main-text);
+  background-color: var(--roast-new-blue);
 }
 
 .dropdown-menu a {
